# daily-ai-opensource

./: .gitignore  README.md  SKILL.md  pyproject.toml
src/daily_ai_skill/: __init__.py  cli.py  generator.py  image_generation.py  models.py  sources.py
templates/: daily_report.md.j2
tests/: test_generator.py
